--- a/ulib/libax/Cargo.toml
+++ b/ulib/libax/Cargo.toml
@@ -39,10 +39,11 @@ log-level-trace = ["axlog/log-level-trace"]
 # Platform
 platform-qemu-virt-riscv = ["axhal/platform-qemu-virt-riscv", "axdriver?/bus-mmio"]
 platform-qemu-virt-aarch64 = ["axhal/platform-qemu-virt-aarch64", "axdriver?/bus-mmio"]
-
+user = ["axruntime/user", "axhal/user", "dep:log"]
 default = ["axtask?/sched_fifo"]
 
 [dependencies]
+log = { version = "0.4", optional = true }
 spinlock = { path = "../../crates/spinlock" }
 axio = { path = "../../crates/axio" }
 axerrno = { path = "../../crates/axerrno" }
