--- a/modules/axconfig/src/platform/qemu-virt-riscv.toml
+++ b/modules/axconfig/src/platform/qemu-virt-riscv.toml
@@ -4,8 +4,8 @@ platform = "qemu-virt-riscv"
 phys-memory-base = "0x8000_0000"
 phys-memory-size = "0x800_0000"     # 128M
 kernel-base-paddr = "0x8020_0000"
-kernel-base-vaddr = "0x0000_0000_8020_0000"
-phys-virt-offset = "0x0000_0000_0000_0000"
+kernel-base-vaddr = "0xffff_ffc0_8020_0000"
+phys-virt-offset = "0xffff_ffc0_0000_0000"
 mmio-regions = [
     ["0x0c00_0000", "0x21_0000"],   # PLIC
     ["0x1000_0000", "0x1000"],      # UART
