--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -14,9 +14,9 @@ platform-qemu-virt-aarch64 = [
     "dep:page_table_entry", "dep:ratio",
 ]
 user = []
-paging = ["axalloc", "page_table"]
+paging = ["axalloc", "page_table", "dep:page_table_entry"]
 # 默认启动用户态
-default = ["user"]
+default = ["user", "paging"]
 
 [dependencies]
 log = "0.4"
@@ -24,6 +24,7 @@ cfg-if = "1.0"
 bitflags = "2.0"
 static_assertions = "1.1.0"
 axconfig = { path = "../axconfig" }
+axlog = { path = "../axlog" }
 axalloc = { path = "../axalloc", optional = true }
 kernel_guard = { path = "../../crates/kernel_guard" }
 spinlock = { path = "../../crates/spinlock" }
