--- a/modules/axruntime/Cargo.toml
+++ b/modules/axruntime/Cargo.toml
@@ -16,7 +16,7 @@ fs = ["alloc", "paging", "axdriver/virtio-blk", "axfs/use-virtio-blk"] # TODO: r
 net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet"]
 display = ["alloc", "paging", "axdriver/virtio-gpu", "dep:axdisplay"]
 user = ["axhal/user"]
-default = ["user", "process"]
+default = ["user", "process", "multitask", "paging"]
 
 [dependencies]
 percpu = { path = "../../crates/percpu" }
@@ -33,4 +33,3 @@ axfs = { path = "../axfs", optional = true }
 axnet = { path = "../axnet", optional = true }
 axdisplay = { path = "../axdisplay", optional = true }
 axtask = { path = "../axtask", default-features = false }
-axprocess = { path = "../axprocess" }
