--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ members = [
     "modules/axsync",
     "modules/axtask",
     "modules/axsyscall",
+    "modules/axprocess",
 
     "ulib/libax",
     "ulib/c_libax/libax_bindings",
