--- a/modules/axprocess/Cargo.toml
+++ b/modules/axprocess/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axsyscall"
+name = "axprocess"
 version = "0.1.0"
 edition = "2021"
 authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
@@ -7,9 +7,12 @@ authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axhal = { path = "../axhal" }
-axtask = { path = "../axtask" }
 axalloc = { path = "../axalloc" }
+spinlock = { path = "../../crates/spinlock" }
+axtask = { path = "../axtask" }
+axhal = { path = "../axhal" }
 axlog = { path = "../axlog" }
-axprocess = { path = "../axprocess" }
-log = "0.4.0"
+memory_addr = { path = "../../crates/memory_addr" }
+lazy_init = { path = "../../crates/lazy_init"}
+riscv = "0.10"
+xmas-elf = "0.9.0"
