--- a/modules/axruntime/Cargo.toml
+++ b/modules/axruntime/Cargo.toml
@@ -34,3 +34,4 @@ axnet = { path = "../axnet", optional = true }
 axdisplay = { path = "../axdisplay", optional = true }
 axtask = { path = "../axtask", default-features = false }
 axsyscall = { path = "../axsyscall" }
+axprocess = { path = "../axprocess" }
