--- a/modules/axsyscall/Cargo.toml
+++ b/modules/axsyscall/Cargo.toml
@@ -13,3 +13,4 @@ axalloc = { path = "../axalloc" }
 axlog = { path = "../axlog" }
 axprocess = { path = "../axprocess" }
 log = "0.4.0"
+bitflags = "= 2.1.0"
