--- a/modules/axsyscall/Cargo.toml
+++ b/modules/axsyscall/Cargo.toml
@@ -11,6 +11,7 @@ axhal = { path = "../axhal" }
 axalloc = { path = "../axalloc" }
 axlog = { path = "../axlog" }
 axprocess = { path = "../axprocess" }
+axfs_os = { path = "../axfs_os" }
 axmem = { path = "../axmem" }
 log = "0.4.0"
 bitflags = "= 2.1.0"
