--- a/modules/axsyscall/Cargo.toml
+++ b/modules/axsyscall/Cargo.toml
@@ -15,3 +15,4 @@ axfs_os = { path = "../axfs_os" }
 axmem = { path = "../axmem" }
 log = "0.4.0"
 bitflags = "= 2.1.0"
+memory_addr = { path = "../../crates/memory_addr" }
