--- a/modules/axfs_os/Cargo.toml
+++ b/modules/axfs_os/Cargo.toml
@@ -12,4 +12,5 @@ axtask = { path = "../axtask" }
 axio = { path = "../../crates/axio" }
 axsync = { path = "../axsync" }
 axhal = { path = "../axhal" }
+log = "0.4.0"
 bitflags = "= 2.1.0"
