--- a/modules/axsyscall/Cargo.toml
+++ b/modules/axsyscall/Cargo.toml
@@ -12,6 +12,7 @@ axalloc = { path = "../axalloc" }
 axlog = { path = "../axlog" }
 axprocess = { path = "../axprocess" }
 axfs_os = { path = "../axfs_os" }
+axfs = { path = "../axfs" }
 axmem = { path = "../axmem" }
 log = "0.4.0"
 bitflags = "= 2.1.0"
