--- a/modules/axsyscall/Cargo.toml
+++ b/modules/axsyscall/Cargo.toml
@@ -14,6 +14,7 @@ axprocess = { path = "../axprocess" }
 axfs_os = { path = "../axfs_os" }
 axfs = { path = "../axfs" }
 axmem = { path = "../axmem" }
+axerrno = { path = "../../crates/axerrno" }
 log = "0.4.0"
 bitflags = "= 2.1.0"
 memory_addr = { path = "../../crates/memory_addr" }
