--- a/extern_crates/lock_api-0.4.9/Cargo.toml
+++ b/extern_crates/lock_api-0.4.9/Cargo.toml
@@ -43,7 +43,7 @@ optional = true
 default-features = false
 
 [build-dependencies.autocfg]
-version = "1.1.0"
+path = "../autocfg-1.1.0"
 
 [features]
 arc_lock = []
